--- a/IntroToRggplot2.Rmd
+++ b/IntroToRggplot2.Rmd
@@ -327,7 +327,7 @@ You can change the color palette entirely using a different color scale:
 gg + scale_colour_brewer(palette = "Set1")  # change color palette
 ```
 
-More of such palettes can be found in the [`RColorBrewer`](https://cran.r-project.org/web/packages/RColorBrewer/index.html) library.  Also the [`{ggsci}`](https://cran.r-project.org/web/packages/ggsci/vignettes/ggsci.html) package offers a collection of high-quality color palettes inspired by colors used in scientific journals, data visualization libraries, science fiction movies, and TV shows. 
+More of such palettes can be found in the [`RColorBrewer`](https://cran.r-project.org/web/packages/RColorBrewer/index.html) library.  Also the [`ggsci`](https://cran.r-project.org/web/packages/ggsci/vignettes/ggsci.html) package offers a collection of high-quality color palettes inspired by colors used in scientific journals, data visualization libraries, science fiction movies, and TV shows. 
 
 Use care when when selecting colors for your visualizations, and take care to make your colors accessible for people with color visioin deficiency; [see here for an article with tips on choosing colors for your scientific figures](https://sites.northwestern.edu/researchcomputing/2022/05/20/how-to-choose-a-color-scheme-for-your-scientific-figure/).
 
