--- a/IntroToRggplot2.ipynb
+++ b/IntroToRggplot2.ipynb
@@ -287,7 +287,15 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# load in the Orange tree data\n",
+    "data(Orange)\n",
+    "\n",
+    "# uncomment the following line to inspect the data\n",
+    "# head(Orange)\n",
+    "\n",
+    "# write code to make a scatterplot of tree age vs. circumference"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -304,9 +312,67 @@
    "source": [
     "### 2.1 Method 1 : By deleting the points outside the range\n",
     "\n",
-    "This can be done by `xlim()` and `ylim()`. You can pass a numeric vector of length 2 (with max and min values) or just the max and min values themselves.\n",
+    "This can be done by `scale_x_continuous()` (or the shorthand `xlim()`) and `scale_y_continuous()` (or the shorthand `ylim()`). You can pass a numeric vector of length 2 (with max and min values) or just the max and min values themselves.\n",
+    "\n",
+    "Here we are using \"scales\".  Scales in `ggplot2` control the mapping from data to aesthetics. They take your data and turn it into something that you can see, like size, color, position or shape. They also provide the tools that let you interpret the plot: the axes and legends. You can generate plots with `ggplot2` without knowing how scales work, but understanding scales and learning how to manipulate them will give you much more control. To get an in-depth understanding of how scales work in `ggplot2` see [this book chapter on scales and guides](https://ggplot2-book.org/scales-guides).\n",
+    "\n",
+    "An important property of `ggplot2` is the principle that every aesthetic in your plot is associated with exactly one scale. For instance, when you write this (as we've done above):\n",
+    "\n",
+    "```\n",
+    "ggplot(midwest, aes(x=area, y=poptotal)) + \n",
+    "    geom_point()\n",
+    "```\n",
+    "\n",
+    "`ggplot2` adds a default scale for each aesthetic used in the plot:\n",
+    "\n",
+    "\n",
+    "```\n",
+    "ggplot(midwest, aes(x=area, y=poptotal)) + \n",
+    "    geom_point() +\n",
+    "    scale_x_continuous() + \n",
+    "    scale_y_continuous() \n",
+    "```\n",
     "\n",
     "*Note:* This will change lines of best fit or smoothing that you may have added via `ggplot` (as compared to lines fit to the full dataset).  In some cases, this feature might come in handy, e.g. when you wish to know how the line of best fit would change when some extreme values (or outliers) are removed.  We will cover these fit lines later."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Inside the `scale` layer, you can add limits as:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "ggplot(midwest, aes(x=area, y=poptotal)) + \n",
+    "    geom_point() +\n",
+    "    scale_x_continuous(limits=c(0, 0.1)) + # deletes points\n",
+    "    scale_y_continuous(limits=c(0, 1000000)) # deletes points"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Pro tip*: I personally do not like that `ggplot` expands beyond the limits I set.  You can force it not to do so (or define explicitly how much expansion to apply) by setting the `expand` keyword within `scale_x_continous` and/or `scale_y_continous`, e.g., `scale_x_continuous(limits=c(0, 0.1), expand=c(0,0))`.\n",
+    "\n",
+    "Position scales have many more features that you can [explore](https://ggplot2-book.org/scales-position)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can accomplish the same result with the shorthand `xlim` and `ylim` :"
    ]
   },
   {
@@ -347,62 +413,6 @@
     "ggplot(midwest, aes(x=area, y=poptotal)) + \n",
     "    geom_point() + \n",
     "    coord_cartesian(xlim=c(0,0.1), ylim=c(0, 1000000))  # zooms in\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 2.3 Method 3 : Using the scales layer\n",
-    "\n",
-    "Scales in `ggplot2` control the mapping from data to aesthetics. They take your data and turn it into something that you can see, like size, color, position or shape. They also provide the tools that let you interpret the plot: the axes and legends. You can generate plots with `ggplot2` without knowing how scales work, but understanding scales and learning how to manipulate them will give you much more control. To get an in-depth understanding of how scales work in `ggplot2` see [this book chapter on scales and guides](https://ggplot2-book.org/scales-guides).\n",
-    "\n",
-    "An important property of `ggplot2` is the principle that every aesthetic in your plot is associated with exactly one scale. For instance, when you write this (as we've done above):\n",
-    "\n",
-    "```\n",
-    "ggplot(midwest, aes(x=area, y=poptotal)) + \n",
-    "    geom_point()\n",
-    "```\n",
-    "\n",
-    "`ggplot2` adds a default scale for each aesthetic used in the plot:\n",
-    "\n",
-    "\n",
-    "```\n",
-    "ggplot(midwest, aes(x=area, y=poptotal)) + \n",
-    "    geom_point() +\n",
-    "    scale_x_continuous() + \n",
-    "    scale_y_continuous() \n",
-    "```\n",
-    "\n",
-    "Inside the `scale` layer, you can add limits as:\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "\n",
-    "ggplot(midwest, aes(x=area, y=poptotal)) + \n",
-    "    geom_point() +\n",
-    "    scale_x_continuous(limits=c(0, 0.1)) + \n",
-    "    scale_y_continuous(limits=c(0, 1000000))\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Scales maps from the data-points to the aesthetics, it does not delete data-points, rather it zooms in similar to `coord_cartesian()` .\n",
-    "\n",
-    "*Pro tip*: I personally do not like that `ggplot` expands beyond the limits I set.  You can force it not to do so (or define explicitly how much expansion to apply) by setting the `expand` keyword within `scale_x_continous` and/or `scale_y_continous`, e.g., `scale_x_continuous(limits=c(0, 0.1), expand=c(0,0))`.\n",
-    "\n",
-    "Position scales have many more features that you can [explore](https://ggplot2-book.org/scales-position).\n"
    ]
   },
   {
@@ -675,7 +685,7 @@
    "source": [
     "### EXERCISE 4\n",
     "\n",
-    "Color the points in the Orange data by the `Tree` column, and change the size of the points."
+    "Color the points in the Orange data by the `Tree` column, and change the size of the points to a constant value.\n"
    ]
   },
   {
@@ -813,7 +823,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Note:* The fit can change based on how you Zoom into the plot. If you adjust the axis limits by zooming in (e.g., using `coord_cartesian()` or `scale_x_continous()`), this should not change the fit.  However, if you use `xlim()` and `ylim()`, you will delete points, and that will change the fit. "
+    "*Note:* The fit can change based on how you Zoom into the plot. If you adjust the axis limits by zooming in (e.g., using `coord_cartesian()` ), this should not change the fit.  However, if you use `xlim()` and `ylim()` or `scale_x_continous()` and `scale_y_continous()`, you will delete points, and that will change the fit. "
    ]
   },
   {
